# Envio-Firmware

./: .gitignore  Dockerfile  README.md  docker-compose-app.yml  docker-compose-network.yml  docker-compose.yml  docker-composer-app.yml  pyproject.toml
Envio-Firmware/: FOTA.py
app/: CLIENT.PY  Client_TCP.py  FOTA.py
app/Files/: 00400000_MP3.SFB  10000000_MP3.SFB  vl8_155b34.sfb  vl8_156b30.sfb
db/: init.sql
tests/: test_main.py
