[tool.poetry]
name = "envio-fw"
version = "0.1.0"
description = ""
authors = ["Guilherme Brida <guilherme.brida@crearesistemas.com.br>"]
readme = "README.md"
packages = [{include = "envio_fw"}]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.6"
tenacity = "^8.2.2"
sqlalchemy = "^2.0.19"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ignr = "^2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
